<resources>
    <string name="app_name">PCL</string>
    <string name="log_title">Logs</string>
    <string name="settings_title">Settings</string>
    <string name="save_button">Save</string>
    <string name="advance_label">Advanced:</string>
    <string name="packageName">Package Name</string>
    <string name="system_method">System Method</string>
    <string name="policy">Policy</string>
    <string name="inform">Inform</string>
    <string name="global_policy">Global Policy</string>
    <string name="global_inform_level">Global Inform Level</string>
    <string name="save">SAVE</string>
</resources>
